<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <ImageView
        android:id="@+id/imageView_home_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/tm_image" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_home_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_home_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/discover_kulture_activities"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_home_activities"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:nestedScrollingEnabled="false"
                android:scrollbars="horizontal"
                tools:listitem="@layout/recycler_item_home" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_home_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_home_browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/browse_activities" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_home_today"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_size"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:gravity="center"
                    android:text="@string/today"
                    android:textSize="@dimen/main_txt_size" />

                <Button
                    android:id="@+id/button_home_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_size"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:gravity="center"
                    android:text="@string/tomorrow"
                    android:textSize="@dimen/main_txt_size" />

                <Button
                    android:id="@+id/button_home_week"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_size"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:gravity="center"
                    android:text="@string/this_week"
                    android:textSize="@dimen/main_txt_size" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <WebView
        android:id="@+id/web_view_for_youtube"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>