<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_send_phone_number">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_past_activities" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="72dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.activity.phone.SendPhoneActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#AAFFFFFF"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_send_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="10"
                    android:background="#00000000"
                    android:ems="10"
                    android:fontFamily="@font/bebas_neue_regular"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/background_light" />

                <ImageView
                    android:id="@+id/iv_is_success"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/failure"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/bt_send_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/orange_special"
                android:fontFamily="@font/bebas_neue_regular"
                android:text="@string/send_phone"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="70dp"
                android:layout_weight="260"
                android:contentDescription="@string/image_logo_description"
                android:src="@drawable/logo" />

        </LinearLayout>
    </FrameLayout>
</layout>
