<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_detail_class"
        tools:showIn="@layout/content_detail_class">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textView_detail_class_start_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date_detail" />

                <TextView
                    android:id="@+id/textView_detail_class_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="04 Aug 2017" />

                <include
                    android:id="@+id/group"
                    layout="@layout/detail_item" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textView_detail_class_start_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_detail" />

                <TextView
                    android:id="@+id/textView_detail_class_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="12:15PM - 1:00PM" />

                <Button
                    android:id="@+id/button_detail_class_reserve_card"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@color/orange_special"
                    android:text="@string/reserve"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>